update register api and add login api with auth JWT Token
