# clinic-reservation-api/app/Http/Controllers/Api/AuthController.php
@@ -4,12 +4,14 @@ namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Auth\RegisterRequest;
+use App\Http\Requests\Auth\LoginRequest;
 use App\Models\Doctor;
 use App\Models\Patient;
 use App\Models\User;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Support\Facades\DB;
 use Illuminate\Support\Facades\Hash;
+use PHPOpenSourceSaver\JWTAuth\Facades\JWTAuth;
 use OpenApi\Attributes as OA;
 
 class AuthController extends Controller
@@ -24,8 +26,8 @@ class AuthController extends Controller
             content: new OA\JsonContent(
                 required: ['full_name', 'email', 'password', 'password_confirmation', 'role'],
                 properties: [
-                    new OA\Property(property: 'full_name', type: 'string', example: 'Ahmed Hassan'),
-                    new OA\Property(property: 'email', type: 'string', format: 'email', example: 'ahmed@example.com'),
+                    new OA\Property(property: 'full_name', type: 'string', example: 'Hossam Mahmoud'),
+                    new OA\Property(property: 'email', type: 'string', format: 'email', example: 'hossam@example.com'),
                     new OA\Property(property: 'phone', type: 'string', nullable: true, example: '01012345678'),
                     new OA\Property(property: 'password', type: 'string', format: 'password', example: 'secret123'),
                     new OA\Property(property: 'password_confirmation', type: 'string', format: 'password', example: 'secret123'),
@@ -47,22 +49,20 @@ class AuthController extends Controller
                 content: new OA\JsonContent(
                     properties: [
                         new OA\Property(property: 'message', type: 'string', example: 'User registered successfully'),
+                        new OA\Property(property: 'token', type: 'string', example: '1|abcxyztoken'),
                         new OA\Property(
                             property: 'data',
                             properties: [
                                 new OA\Property(
                                     property: 'user',
                                     properties: [
-                                        new OA\Property(property: 'user_id', type: 'integer', example: 10),
                                         new OA\Property(property: 'full_name', type: 'string', example: 'Ahmed Hassan'),
                                         new OA\Property(property: 'email', type: 'string', format: 'email', example: 'ahmed@example.com'),
                                         new OA\Property(property: 'phone', type: 'string', nullable: true, example: '01012345678'),
                                         new OA\Property(property: 'role', type: 'string', example: 'PATIENT'),
-                                        new OA\Property(property: 'created_at', type: 'string', format: 'date-time'),
                                     ],
                                     type: 'object'
                                 ),
-                                new OA\Property(property: 'profile', type: 'object')
                             ],
                             type: 'object'
                         ),
@@ -70,12 +70,24 @@ class AuthController extends Controller
                     type: 'object'
                 )
             ),
-            new OA\Response(response: 422, description: 'Validation error')
+            new OA\Response(
+                response: 422,
+                description: 'Validation error / user already exists'
+            )
         ]
     )]
     public function register(RegisterRequest $request): JsonResponse
-    {
+        {
         $payload = $request->validated();
+
+        if (User::where('email', $payload['email'])->exists()) {
+            return response()->json([
+                'message' => 'User already exists.',
+                'errors' => [
+                    'email' => ['User already exists with this email.']
+                ]
+            ], 422);
+        }
 
         $result = DB::transaction(function () use ($payload) {
             $user = User::create([
@@ -107,15 +119,99 @@ class AuthController extends Controller
                 ]);
             }
 
+            $token  = JWTAuth::fromUser($user);
+
             return [
-                'user' => $user,
+                'user' => $user->fresh(),
                 'profile' => $profile,
+                'token' => $token,
             ];
         });
 
         return response()->json([
             'message' => 'User registered successfully',
-            'data' => $result,
+            'token' => $result['token'],
+            'data' => [
+                'user' =>[
+                    'full_name' => $result['user']['full_name'],
+                    'phone' => $result['user']['phone'],
+                    'email'=> $result['user']['email'],
+                    'role'=> $result['user']['role'],
+                ]
+            ],
         ], 201);
+    }
+    #[OA\Post(
+        path: '/api/login',
+        operationId: 'loginUser',
+        tags: ['Auth'],
+        summary: 'Login user',
+        requestBody: new OA\RequestBody(
+            required: true,
+            content: new OA\JsonContent(
+                required: ['email', 'password'],
+                properties: [
+                    new OA\Property(property: 'email', type: 'string', format: 'email', example: 'ahmed@example.com'),
+                    new OA\Property(property: 'password', type: 'string', format: 'password', example: 'secret123'),
+                ]
+            )
+        ),
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'Login successful',
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(property: 'message', type: 'string', example: 'Login successful'),
+                        new OA\Property(property: 'token', type: 'string', example: 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9...'),
+                        new OA\Property(
+                            property: 'data',
+                            properties: [
+                                new OA\Property(
+                                    property: 'user',
+                                    properties: [
+                                        new OA\Property(property: 'full_name', type: 'string', example: 'Ahmed Hassan'),
+                                        new OA\Property(property: 'email', type: 'string', format: 'email', example: 'ahmed@example.com'),
+                                        new OA\Property(property: 'phone', type: 'string', nullable: true, example: '01012345678'),
+                                        new OA\Property(property: 'role', type: 'string', example: 'PATIENT'),
+                                    ],
+                                    type: 'object'
+                                )
+                            ],
+                            type: 'object'
+                        ),
+                    ],
+                    type: 'object'
+                )
+            ),
+            new OA\Response(response: 401, description: 'Invalid credentials'),
+            new OA\Response(response: 422, description: 'Validation error')
+        ]
+    )]
+    public function login(LoginRequest $request): JsonResponse
+    {
+        $credentials = $request->validated();
+
+        if (! $token = auth('api')->attempt($credentials)) {
+            return response()->json([
+                'message' => 'Invalid credentials',
+            ], 401);
+        }
+
+        /** @var \App\Models\User $user */
+        $user = auth('api')->user();
+
+        return response()->json([
+            'message' => 'Login successful',
+            'token' => $token,
+            // return user name and email only
+            'data'=>[
+                'user' => [
+                'full_name' => $user->full_name,
+                'email' => $user->email,
+                'phone' => $user->phone,
+                'role' => $user->role,
+            ]]
+        ], 200);
     }
 }
